--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NomeEmpresa | Página Inicial</title>
+
+    <!-- Link CSS -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- Link Icones -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0" />
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>NomeDaEmpresa ou Logo</h1>
+        <nav>
+            <ul>
+                <li>Página Inicial</li>
+                <li>Produtos</li>
+                <li>Contato</li>
+            </ul>
+        </nav>
+        <div class="container-icones">
+            <i><span class="material-symbols-outlined">search</span></i>
+            <i><span class="material-symbols-outlined">account_circle</span></i>
+        </div>
+    </header>
     <main></main>
     <footer></footer>
 </body>
