Definindo configurações padrão do css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
             <i><span class="material-symbols-outlined">account_circle</span></i>
         </div>
     </header>
-    <main></main>
-    <footer></footer>
+
+    <main>
+
+    </main>
+
+    <footer>
+        
+    </footer>
 </body>
 </html>
