--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
     <!-- Link Icones -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0" />
+
+    <!-- Link Fonte -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@200;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -33,7 +38,7 @@
     </main>
 
     <footer>
-        
+
     </footer>
 </body>
 </html>
