Mudando ícones de pesquisa e perfil. Colocando nome da empresa no header

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NomeEmpresa | Página Inicial</title>
+    <title>Envision | Página Inicial</title>
 
     <!-- Link CSS -->
     <link rel="stylesheet" href="style.css">
 
     <!-- Link Icones -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0" />
-
+    <script src="https://kit.fontawesome.com/415f58636f.js" crossorigin="anonymous"></script>
+    
     <!-- Link Fonte -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <h1>NomeDaEmpresa ou Logo</h1>
+        <h1>Envision</h1>
         <nav>
             <ul>
                 <li>Página Inicial</li>
@@ -28,8 +28,8 @@
             </ul>
         </nav>
         <div class="container-icones">
-            <i><span class="material-symbols-outlined">search</span></i>
-            <i><span class="material-symbols-outlined">account_circle</span></i>
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <i class="fa-solid fa-user"></i>
         </div>
     </header>
 
