Movendo arquivos para pasta de assets e colocando banner de teste

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Envision | Página Inicial</title>
 
     <!-- Link CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/style/style.css">
 
     <!-- Link Icones -->
     <script src="https://kit.fontawesome.com/415f58636f.js" crossorigin="anonymous"></script>
-    
+
     <!-- Link Fonte -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +34,7 @@
     </header>
 
     <main>
-
+        <img src="./assets/imagens/teste1.jpg" height="690px" width="100%" class="banner-apresentacao">
     </main>
 
     <footer>
