--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <h1>Envision</h1>
         <nav>
             <ul>
-                <li>Página Inicial</li>
-                <li>Produtos</li>
-                <li>Contato</li>
+                <li><a href="#">Página Inicial</a></li>
+                <li><a href="#">Produtos</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
         </nav>
         <div class="container-icones">
