Faz esqueleto da seção de novidades da página inicial

--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
 
     <main>
         <img src="./assets/imagens/teste1.jpg" height="690px" width="100%" class="banner-apresentacao">
+        <section>
+            <div class="novidade novidade1">
+                <div>
+                    <h2>Novidade 1</h2>
+                    <p>Lorem Ipsum Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
+                    <button>Saiba Mais</button>
+                </div>
+                <img src="./assets/imagens/teste2.JPG" width="400px" height="250px">
+            </div>
+            <div class="novidade novidade2">
+                <div>
+                    <h2>Novidade 2</h2>
+                    <p>Lorem Ipsum Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
+                    <button>Saiba Mais</button>
+                </div>
+                <img src="./assets/imagens/teste3.jpg" width="400px" height="250px">
+            </div>
+        </section>
     </main>
 
     <footer>
