--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
 
     <main>
         <img src="./assets/imagens/teste1.jpg" height="690px" width="100%" class="banner-apresentacao">
-        <section>
+        <section class="novidades">
             <div class="novidade novidade1">
-                <div>
+                <div class="texto-novidade texto-novidade1">
                     <h2>Novidade 1</h2>
                     <p>Lorem Ipsum Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
                     <button>Saiba Mais</button>
                 </div>
-                <img src="./assets/imagens/teste2.JPG" width="400px" height="250px">
+                <img src="./assets/imagens/teste2.JPG" width="550px" height="300px" class="imagem-novidade1">
             </div>
             <div class="novidade novidade2">
-                <div>
+                <img src="./assets/imagens/teste3.jpg" width="550px" height="300px" class="imagem-novidade imagem-novidade2">
+                <div class="texto-novidade texto-novidade2">
                     <h2>Novidade 2</h2>
                     <p>Lorem Ipsum Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
                     <button>Saiba Mais</button>
                 </div>
-                <img src="./assets/imagens/teste3.jpg" width="400px" height="250px">
             </div>
         </section>
     </main>
