Criando esqueleto da seção de categorias com imagens teste

--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
                 </div>
             </div>
         </section>
+        <section class="produtos-destaque">
+
+        </section>
+        <section class="categorias">
+            <img src="./assets/imagens/teste4.jpg" class="categoria categoria1" width="100%">
+            <img src="./assets/imagens/teste5.jpg" class="categoria categoria2" width="100%">
+            <img src="./assets/imagens/teste6.jfif" class="categoria categoria3" width="100%">
+            <img src="./assets/imagens/teste7.jpg" class="categoria categoria4" width="100%">
+        </section>
     </main>
 
     <footer>
