Cria esqueleto do footer do site

--- a/index.html
+++ b/index.html
@@ -63,9 +63,24 @@
             <img src="./assets/imagens/teste7.jpg" class="categoria categoria4" width="100%">
         </section>
     </main>
-
     <footer>
-
+        <h1>Envision</h1>
+        <section>
+            <nav>
+                <a href="">Início</a>
+                <a href="">Produtos</a>
+                <a href="">Contato</a>
+            </nav>
+            <div class="container-icones">
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+            <div></div>
+            <span>©Envision - Site realizado por alunos do Colégio Cotemig para fins educacionais</span>
+        </section>
     </footer>
 </body>
 </html>
