Adiciona estilização ao footer, organizando os elementos

--- a/index.html
+++ b/index.html
@@ -66,20 +66,28 @@
     <footer>
         <h1>Envision</h1>
         <section>
-            <nav>
-                <a href="">Início</a>
-                <a href="">Produtos</a>
-                <a href="">Contato</a>
-            </nav>
-            <div class="container-icones">
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-youtube"></i>
-                <i class="fa-brands fa-twitter"></i>
+            <div class="parte-superior">
+                <nav>
+                    <a href="">Início</a>
+                    <a href="">Produtos</a>
+                    <a href="">Contato</a>
+                </nav>
+                <div class="container-icones">
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
             </div>
-            <div></div>
-            <span>©Envision - Site realizado por alunos do Colégio Cotemig para fins educacionais</span>
+            <div class="parte-inferior">
+                <div>
+                    <a href="">Termos de uso</a>
+                    <a href="">Cookies</a>
+                    <a href="">Privacidade</a>
+                </div>
+                <span>©Envision - Site realizado por alunos do Colégio Cotemig para fins educacionais</span>
+            </div>
         </section>
     </footer>
 </body>
