Adiciona seta que ao clicar volta para o topo da página

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 <span>©Envision - Site realizado por alunos do Colégio Cotemig para fins educacionais</span>
             </div>
         </section>
+        <i class="fa-solid fa-arrow-up"></i>
     </footer>
 </body>
 </html>
