--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="container-icones">
             <i class="fa-solid fa-magnifying-glass"></i>
             <i class="fa-solid fa-user"></i>
+            <i class="fa-solid fa-moon"></i>
         </div>
     </header>
 
