Substitui as imagens, adiciona textos e muda cores

--- a/index.html
+++ b/index.html
@@ -35,21 +35,23 @@
     </header>
 
     <main>
-        <img src="./assets/imagens/teste1.jpg" height="690px" width="100%" class="banner-apresentacao">
+        <div class="banner-apresentacao">
+            <h1>Frase de impacto</h1>
+        </div>
         <section class="novidades">
             <div class="novidade novidade1">
                 <div class="texto-novidade texto-novidade1">
-                    <h2>Novidade 1</h2>
-                    <p>Lorem Ipsum Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
+                    <h2>VisionCore - C620 Ultra</h2>
+                    <p>Nova tecnologia de ponta. Um processador que se adapta a todas as suas tarefas.</p>
                     <button>Saiba Mais</button>
                 </div>
-                <img src="./assets/imagens/teste2.JPG" width="520px" height="300px" class="imagem-novidade1">
+                <img src="./assets/imagens/circuitos.png" width="520px"  class="imagem-novidade1">
             </div>
             <div class="novidade novidade2">
-                <img src="./assets/imagens/teste3.jpg" width="520px" height="300px" class="imagem-novidade imagem-novidade2">
+                <img src="./assets/imagens/palestra.png" width="520px"  class="imagem-novidade imagem-novidade2">
                 <div class="texto-novidade texto-novidade2">
-                    <h2>Novidade 2</h2>
-                    <p>Lorem Ipsum Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
+                    <h2>A empresa que te prepara para um futuro brilhante</h2>
+                    <p>Classificada, por três anos seguidos, como uma das empresas de tecnologia mais bem sucedidas do Brasil</p>
                     <button>Saiba Mais</button>
                 </div>
             </div>
@@ -58,10 +60,8 @@
 
         </section>
         <section class="categorias">
-            <img src="./assets/imagens/teste4.jpg" class="categoria categoria1" width="100%">
-            <img src="./assets/imagens/teste5.jpg" class="categoria categoria2" width="100%">
-            <img src="./assets/imagens/teste6.jfif" class="categoria categoria3" width="100%">
-            <img src="./assets/imagens/teste7.jpg" class="categoria categoria4" width="100%">
+            <img src="./assets/imagens/placadevideo.png" class="categoria categoria1" width="100%">
+            <img src="./assets/imagens/processador.png" class="categoria categoria2" width="100%">
         </section>
     </main>
     <footer>
