--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Envision | Página Inicial</title>
 
     <!-- Link CSS -->
-    <link rel="stylesheet" href="./assets/style/style.css">
+    <link rel="stylesheet" href="./assets/style/style.css" id="linkCss" tema="claro">
 
     <!-- Link Icones -->
     <script src="https://kit.fontawesome.com/415f58636f.js" crossorigin="anonymous"></script>
@@ -30,7 +30,7 @@
         <div class="container-icones">
             <i class="fa-solid fa-magnifying-glass"></i>
             <i class="fa-solid fa-user"></i>
-            <i class="fa-solid fa-moon"></i>
+            <i class="fa-solid fa-moon" onclick="mudaTema()"></i>
         </div>
     </header>
 
@@ -92,5 +92,7 @@
         </section>
         <i class="fa-solid fa-arrow-up"></i>
     </footer>
+
+    <script src="./assets/script/scriptPgInicial.js"></script>
 </body>
 </html>
