Adiciona cursor: pointer nos ícones e botões

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Envision | Página Inicial</title>
 
     <!-- Link CSS -->
-    <link rel="stylesheet" href="./assets/style/style.css" id="linkCss" tema="claro">
+    <link rel="stylesheet" href="./assets/style/style.css" id="linkCss">
 
     <!-- Link Icones -->
     <script src="https://kit.fontawesome.com/415f58636f.js" crossorigin="anonymous"></script>
