Coloca a logo do site no footer e header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <h1>Envision</h1>
+        <img src="./assets/imagens/Logo/logoHorizontal.png" alt="" width="180px">
         <nav>
             <ul>
                 <li><a href="#">Página Inicial</a></li>
@@ -65,7 +65,7 @@
         </section>
     </main>
     <footer>
-        <h1>Envision</h1>
+        <img src="./assets/imagens/Logo/logoVertical.png" width="120px">
         <section>
             <div class="parte-superior">
                 <nav>
