Define scroll behavior como smooth

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <img src="./assets/imagens/Logo/logoHorizontal.png" alt="" width="180px">
+        <img src="./assets/imagens/Logo/logoHorizontal.png" width="180px">
         <nav>
             <ul>
                 <li><a href="#">Página Inicial</a></li>
@@ -89,8 +89,8 @@
                 </div>
                 <span>©Envision - Site realizado por alunos do Colégio Cotemig para fins educacionais</span>
             </div>
-        </section>
-        <i class="fa-solid fa-arrow-up"></i>
+        </section> 
+        <a href="#top"><i class="fa-solid fa-arrow-up"></i></a>
     </footer>
 
     <script src="./assets/script/scriptPgInicial.js"></script>
