Modifica dinamicamente a logo no header e no footer dependendo do tema habilitado

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Envision | Página Inicial</title>
 
     <!-- Link CSS -->
-    <link rel="stylesheet" href="./assets/style/style.css" id="linkCss">
+    <link rel="stylesheet" href="./assets/style/style.css" id="linkCss" tema="claro">
 
     <!-- Link Icones -->
     <script src="https://kit.fontawesome.com/415f58636f.js" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <img src="./assets/imagens/Logo/logoHorizontal.png" width="180px">
+        <img src="./assets/imagens/Logo/logoHorizontal.png" width="180px" class="logo">
         <nav>
             <ul>
                 <li><a href="#">Página Inicial</a></li>
@@ -65,7 +65,7 @@
         </section>
     </main>
     <footer>
-        <img src="./assets/imagens/Logo/logoVertical.png" width="120px">
+        <img src="./assets/imagens/Logo/logoVertical.png" width="120px" class="logo">
         <section>
             <div class="parte-superior">
                 <nav>
