Adiciona responsividade à página inicial

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
         </section>
         <section class="categorias">
+            <h2>Lançamentos</h2>
             <img src="./assets/imagens/placadevideo.png" class="categoria categoria1" width="100%">
             <img src="./assets/imagens/processador.png" class="categoria categoria2" width="100%">
         </section>
@@ -90,7 +91,7 @@
                 <span>©Envision - Site realizado por alunos do Colégio Cotemig para fins educacionais</span>
             </div>
         </section> 
-        <a href="#top"><i class="fa-solid fa-arrow-up"></i></a>
+        <div class="container-seta"><a href="#top"><i class="fa-solid fa-arrow-up"></i></a></div>
     </footer>
 
     <script src="./assets/script/scriptPgInicial.js"></script>
