--- a/contato.html
+++ b/contato.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Envision | Página Inicial</title>
+    <title>Envision | Contato</title>
 
     <!-- Link CSS -->
     <link rel="stylesheet" href="./assets/style/style.css" id="linkCss" tema="claro">
@@ -22,9 +22,9 @@
         <img src="./assets/imagens/Logo/logoHorizontal.png" width="180px" class="logo">
         <nav>
             <ul>
-                <li><a href="#">Página Inicial</a></li>
-                <li><a href="#">Produtos</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="index.html">Página Inicial</a></li>
+                <li><a href="produto.html">Produtos</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
         <div class="container-icones">
@@ -33,35 +33,30 @@
             <i class="fa-solid fa-moon" onclick="mudaTema()"></i>
         </div>
     </header>
-
     <main>
-        <div class="banner-apresentacao">
-            <h1>Frase de impacto</h1>
-        </div>
-        <section class="novidades">
-            <div class="novidade novidade1">
-                <div class="texto-novidade texto-novidade1">
-                    <h2>VisionCore - C620 Ultra</h2>
-                    <p>Nova tecnologia de ponta. Um processador que se adapta a todas as suas tarefas.</p>
-                    <button>Saiba Mais</button>
-                </div>
-                <img src="./assets/imagens/circuitos.png" width="520px"  class="imagem-novidade1">
-            </div>
-            <div class="novidade novidade2">
-                <img src="./assets/imagens/palestra.png" width="520px"  class="imagem-novidade imagem-novidade2">
-                <div class="texto-novidade texto-novidade2">
-                    <h2>A empresa que te prepara para um futuro brilhante</h2>
-                    <p>Classificada, por três anos seguidos, como uma das empresas de tecnologia mais bem sucedidas do Brasil</p>
-                    <button>Saiba Mais</button>
-                </div>
-            </div>
-        </section>
-        <section class="produtos-destaque">
+        <section>
+            <h2>Contate-nos</h2>
+            <span>Tem alguma dúvida? Ou alguma pergunta? Fale Conosco!</span>
 
+            <form>
+                <label>Nome:</label>
+                <input type="text">
+                <label>Email:</label>
+                <input type="text">
+                <label>Telefone:</label>
+                <input type="text">
+                <label>Mensagem:</label>
+                <input type="text">
+            </form>
         </section>
-        <section class="categorias">
-            <img src="./assets/imagens/placadevideo.png" class="categoria categoria1" width="100%">
-            <img src="./assets/imagens/processador.png" class="categoria categoria2" width="100%">
+        <section>
+            <img src="" alt="">
+            <h2>Nossa sede</h2>
+            <span>
+                Av. Bernardo de Vasconcelos, 377 - Cachoeirinha, Belo Horizonte -
+                MG, 31150-900
+            </span>
+            <i class="fa-solid fa-map-location-dot"></i>
         </section>
     </main>
     <footer>
@@ -69,9 +64,9 @@
         <section>
             <div class="parte-superior">
                 <nav>
-                    <a href="">Início</a>
-                    <a href="">Produtos</a>
-                    <a href="">Contato</a>
+                    <a href="index.html">Início</a>
+                    <a href="produto.html">Produtos</a>
+                    <a href="contato.html">Contato</a>
                 </nav>
                 <div class="container-icones">
                     <i class="fa-brands fa-linkedin"></i>
