--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <img src="./assets/imagens/Logo/logoHorizontal.png" width="180px" class="logo">
         <nav>
             <ul>
-                <li><a href="#">Página Inicial</a></li>
+                <li><a href="./index.html">Página Inicial</a></li>
                 <li><a href="#">Produtos</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
         <div class="container-icones">
@@ -69,9 +69,9 @@
         <section>
             <div class="parte-superior">
                 <nav>
-                    <a href="">Início</a>
+                    <a href="./index.html">Início</a>
                     <a href="">Produtos</a>
-                    <a href="">Contato</a>
+                    <a href="./contato.html">Contato</a>
                 </nav>
                 <div class="container-icones">
                     <i class="fa-brands fa-linkedin"></i>
