Adiciona seção de fale conosco na página de contato

--- a/contato.html
+++ b/contato.html
@@ -7,7 +7,7 @@
     <title>Envision | Contato</title>
 
     <!-- Link CSS -->
-    <link rel="stylesheet" href="./assets/style/style.css" id="linkCss" tema="claro">
+    <link rel="stylesheet" href="./assets/style/contato.css" id="linkCss" tema="claro">
 
     <!-- Link Icones -->
     <script src="https://kit.fontawesome.com/415f58636f.js" crossorigin="anonymous"></script>
@@ -34,22 +34,36 @@
         </div>
     </header>
     <main>
-        <section>
-            <h2>Contate-nos</h2>
-            <span>Tem alguma dúvida? Ou alguma pergunta? Fale Conosco!</span>
-
-            <form>
-                <label>Nome:</label>
-                <input type="text">
-                <label>Email:</label>
-                <input type="text">
-                <label>Telefone:</label>
-                <input type="text">
-                <label>Mensagem:</label>
-                <input type="text">
-            </form>
+        <section class="contate-nos">
+            <div>
+                <div class="texto-contato">
+                    <h2>Contate-nos</h2>
+                    <span>Tem alguma dúvida? Ou alguma pergunta? Fale Conosco!</span>
+                </div>
+                <form>
+                    <label>Nome:</label>
+                    <input type="text">
+                    <label>Email:</label>
+                    <input type="text">
+                    <label>Telefone:</label>
+                    <input type="text">
+                    <label>Mensagem:</label>
+                    <textarea cols="30" rows="10"></textarea>
+                </form>
+            </div>
+            <div>
+                <h2>Fale Conosco</h2>
+                <div>
+                    <span>Nossa central de antendimento:</span>
+                    <span>+55 (31) 98273-9203</span>
+                </div>
+                <div>
+                    <span>Nos mande um email</span>
+                    <span>envisioncontact@mail.envision.com</span>
+                </div>
+            </div>
         </section>
-        <section>
+        <section class="sede">
             <img src="" alt="">
             <h2>Nossa sede</h2>
             <span>
