Organizando formulário de contato e os meios de contato

--- a/contato.html
+++ b/contato.html
@@ -35,7 +35,7 @@
     </header>
     <main>
         <section class="contate-nos">
-            <div>
+            <div>    
                 <div class="texto-contato">
                     <h2>Contate-nos</h2>
                     <span>Tem alguma dúvida? Ou alguma pergunta? Fale Conosco!</span>
@@ -51,14 +51,16 @@
                     <textarea cols="30" rows="10"></textarea>
                 </form>
             </div>
-            <div>
+            <div class="fale-conosco">
+                
                 <h2>Fale Conosco</h2>
+                
                 <div>
-                    <span>Nossa central de antendimento:</span>
+                    <i class="fa-solid fa-phone"></i>
                     <span>+55 (31) 98273-9203</span>
                 </div>
                 <div>
-                    <span>Nos mande um email</span>
+                    <i class="fa-solid fa-envelope"></i>
                     <span>envisioncontact@mail.envision.com</span>
                 </div>
             </div>
