Adicionando o modo Dark à página de contato

--- a/contato.html
+++ b/contato.html
@@ -52,9 +52,7 @@
                 </form>
             </div>
             <div class="fale-conosco">
-                
                 <h2>Fale Conosco</h2>
-                
                 <div>
                     <i class="fa-solid fa-phone"></i>
                     <span>+55 (31) 98273-9203</span>
@@ -66,13 +64,14 @@
             </div>
         </section>
         <section class="sede">
-            <img src="" alt="">
-            <h2>Nossa sede</h2>
-            <span>
-                Av. Bernardo de Vasconcelos, 377 - Cachoeirinha, Belo Horizonte -
-                MG, 31150-900
-            </span>
-            <i class="fa-solid fa-map-location-dot"></i>
+            <img src="./assets/imagens/nossaSede.png" alt="">
+            <div class="texto-sede">
+                <h2>Nossa sede</h2>
+                <span>
+                    Av. Bernardo de Vasconcelos, 377<br>Cachoeirinha, Belo Horizonte<br>MG, 31150-900
+                </span>
+                <a href="https://www.google.com/maps/place/Av.+Bernardo+de+Vasconcelos,+377+-+Cachoeirinha,+Belo+Horizonte+-+MG,+31150-000/@-19.8847814,-43.9467336,17z/data=!3m1!4b1!4m5!3m4!1s0xa6909e9ac254b3:0x126207d2503226cb!8m2!3d-19.8847814!4d-43.9467336" target="_blank"><i class="fa-solid fa-map-location-dot"></i></a>
+            </div>
         </section>
     </main>
     <footer>
@@ -104,6 +103,6 @@
         <div class="container-seta"><a href="#top"><i class="fa-solid fa-arrow-up"></i></a></div>
     </footer>
 
-    <script src="./assets/script/scriptPgInicial.js"></script>
+    <script src="./assets/script/scriptContato.js"></script>
 </body>
 </html>
