Adiciona responsividade à página de contato

--- a/contato.html
+++ b/contato.html
@@ -64,7 +64,7 @@
             </div>
         </section>
         <section class="sede">
-            <img src="./assets/imagens/nossaSede.png" alt="">
+            <img src="./assets/imagens/nossaSede.png" width="652px">
             <div class="texto-sede">
                 <h2>Nossa sede</h2>
                 <span>
