--- a/produto.html
+++ b/produto.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Envision | Produtos</title>
-
     
-
     <!-- Link Icones -->
     <script src="https://kit.fontawesome.com/415f58636f.js" crossorigin="anonymous"></script>
 
@@ -15,13 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@200;400;700&display=swap" rel="stylesheet">
-
-    <!-- Bootstrap -->
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     
     <!-- Link CSS -->
-    <link rel="stylesheet" href="./assets/style/style.css">
+    <link rel="stylesheet" href="./assets/style/produto.css">
 </head>
 <body>
     <header>
@@ -41,7 +35,7 @@
     </header>
 
     <main>
-        <div class="btn-group">
+        <div class="botoes-produtos">
             <button>Placa de Vídeo</button>
             <button>Processador</button>
         </div>
