--- a/produto.html
+++ b/produto.html
@@ -36,10 +36,10 @@
 
     <main>
         <div class="botoes-produtos">
-            <button>Placa de Vídeo</button>
-            <button>Processador</button>
+            <button onclick="mostraGpu()">Placa de Vídeo</button>
+            <button onclick="mostraCpu()">Processador</button>
         </div>
-        <section class="placa-de-video">
+        <section id="placa-de-video">
             <div>
                 <img src="./assets/imagens/gpu1.png">
                 <div>
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </section>
-        <section class="processador">
+        <section id="processador">
             <div>
                 <img src="./assets/imagens/cpu1.png">
                 <div>
@@ -127,5 +127,7 @@
         </section>
         <i class="fa-solid fa-arrow-up"></i>
     </footer>
+
+    <script src="./assets/script/scriptProdutos.js"></script>
 </body>
 </html>
