Adiciona links às opções do footer e header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav>
             <ul>
                 <li><a href="./index.html">Página Inicial</a></li>
-                <li><a href="#">Produtos</a></li>
+                <li><a href="./produto.html">Produtos</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
@@ -70,7 +70,7 @@
             <div class="parte-superior">
                 <nav>
                     <a href="./index.html">Início</a>
-                    <a href="">Produtos</a>
+                    <a href="./produto.html">Produtos</a>
                     <a href="./contato.html">Contato</a>
                 </nav>
                 <div class="container-icones">
