--- a/contato.html
+++ b/contato.html
@@ -79,7 +79,7 @@
         <section>
             <div class="parte-superior">
                 <nav>
-                    <a href="index.html">Início</a>
+                    <a href="index.html">Página Inicial</a>
                     <a href="produto.html">Produtos</a>
                     <a href="contato.html">Contato</a>
                 </nav>
