--- a/produto.html
+++ b/produto.html
@@ -22,9 +22,9 @@
         <h1>Envision</h1>
         <nav>
             <ul>
-                <li><a href="#">Página Inicial</a></li>
-                <li><a href="#">Produtos</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="./index.html">Página Inicial</a></li>
+                <li><a href="./produto.html">Produtos</a></li>
+                <li><a href="./contato.html">Contato</a></li>
             </ul>
         </nav>
         <div class="container-icones">
@@ -104,7 +104,7 @@
         <section>
             <div class="parte-superior">
                 <nav>
-                    <a href="./index.html">Início</a>
+                    <a href="./index.html">Página Inicial</a>
                     <a href="./produto.html">Produtos</a>
                     <a href="./contato.html">Contato</a>
                 </nav>
