Faz o botão ficar ativado enquanto a página dele está ativa

--- a/produto.html
+++ b/produto.html
@@ -36,8 +36,8 @@
 
     <main>
         <div class="botoes-produtos">
-            <button onclick="mostraGpu()">Placa de Vídeo</button>
-            <button onclick="mostraCpu()">Processador</button>
+            <button onclick="mostraGpu()" id="btnGpu">Placa de Vídeo</button>
+            <button onclick="mostraCpu()" id="btnCpu">Processador</button>
         </div>
         <section id="placa-de-video">
             <div>
