Adiciona modo Dark à página de produtos

--- a/produto.html
+++ b/produto.html
@@ -15,11 +15,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@200;400;700&display=swap" rel="stylesheet">
     
     <!-- Link CSS -->
-    <link rel="stylesheet" href="./assets/style/produto.css">
+    <link rel="stylesheet" href="./assets/style/produto.css" id="linkCss" tema="claro">
 </head>
 <body>
     <header>
-        <h1>Envision</h1>
+        <img src="./assets/imagens/Logo/logoHorizontal.png" width="180px" class="logo">
         <nav>
             <ul>
                 <li><a href="./index.html">Página Inicial</a></li>
@@ -30,7 +30,7 @@
         <div class="container-icones">
             <i class="fa-solid fa-magnifying-glass"></i>
             <i class="fa-solid fa-user"></i>
-            <i class="fa-solid fa-moon"></i>
+            <i class="fa-solid fa-moon" onclick="mudaTema()"></i>
         </div>
     </header>
 
@@ -100,7 +100,7 @@
         </section>
     </main>
     <footer>
-        <h1>Envision</h1>
+        <img src="./assets/imagens/Logo/logoVertical.png" width="120px" class="logo">
         <section>
             <div class="parte-superior">
                 <nav>
