Muda o texto de apresentação no banner da página inicial

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@200;400;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="top">
     <header>
         <img src="./assets/imagens/Logo/logoHorizontal.png" width="180px" class="logo">
         <nav>
@@ -36,7 +36,8 @@
 
     <main>
         <div class="banner-apresentacao">
-            <h1>Frase de impacto</h1>
+            <h1>INOVAÇÃO NUNCA FOI SOBRE BUSCAR NOVOS LUGARES, MAS SIM SOBRE TER UM NOVO OLHAR.</h1>
+            <h2>Nossa missão é revelar o novo, que para nós já é real. Para a Envision, o tempo da inovação se chama HOJE. Queremos habilitar o mundo para um futuro que já está entre nós, almejando enxergar além do que podemos ver.</h2>
         </div>
         <section class="novidades">
             <div class="novidade novidade1">
