--- a/produto.html
+++ b/produto.html
@@ -17,7 +17,7 @@
     <!-- Link CSS -->
     <link rel="stylesheet" href="./assets/style/produto.css" id="linkCss" tema="claro">
 </head>
-<body>
+<body id="top">
     <header>
         <img src="./assets/imagens/Logo/logoHorizontal.png" width="180px" class="logo">
         <nav>
@@ -125,7 +125,7 @@
                 <span>©Envision - Site realizado por alunos do Colégio Cotemig para fins educacionais</span>
             </div>
         </section>
-        <i class="fa-solid fa-arrow-up"></i>
+        <div class="container-seta"><a href="#top"><i class="fa-solid fa-arrow-up"></i></a></div>
     </footer>
 
     <script src="./assets/script/scriptProdutos.js"></script>
