--- a/contato.html
+++ b/contato.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@200;400;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="top">
     <header>
         <img src="./assets/imagens/Logo/logoHorizontal.png" width="180px" class="logo">
         <nav>
