Ajustando o banner da página inicial

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
     <main>
         <div class="banner-apresentacao">
-            <h1>INOVAÇÃO NUNCA FOI SOBRE BUSCAR NOVOS LUGARES, MAS SIM SOBRE TER UM NOVO OLHAR.</h1>
-            <h2>Nossa missão é revelar o novo, que para nós já é real. Para a Envision, o tempo da inovação se chama HOJE. Queremos habilitar o mundo para um futuro que já está entre nós, almejando enxergar além do que podemos ver.</h2>
+            <h1>Inovação nunca foi sobre buscar novos lugares, mas sim sobre ter um novo olhar.</h1>
+            <p>Nossa missão é revelar o novo, que para nós já é real. Para a Envision, o tempo da inovação se chama HOJE. Queremos habilitar o mundo para um futuro que já está entre nós, almejando enxergar além do que podemos ver.</p>
         </div>
         <section class="novidades">
             <div class="novidade novidade1">
