Adicionando textos alternativos para as imagens do site

--- a/contato.html
+++ b/contato.html
@@ -19,7 +19,7 @@
 </head>
 <body id="top">
     <header>
-        <img src="./assets/imagens/Logo/logoHorizontal.png" width="180px" class="logo">
+        <img src="./assets/imagens/Logo/logoHorizontal.png" width="180px" class="logo" alt="logo da Envision no cabeçalho">
         <nav>
             <ul>
                 <li><a href="index.html">Página Inicial</a></li>
@@ -64,7 +64,7 @@
             </div>
         </section>
         <section class="sede">
-            <img src="./assets/imagens/nossaSede.png" width="652px">
+            <img src="./assets/imagens/nossaSede.png" width="652px" alt="imagem da sede da Envision no Brasil">
             <div class="texto-sede">
                 <h2>Nossa sede</h2>
                 <span>
@@ -75,7 +75,7 @@
         </section>
     </main>
     <footer>
-        <img src="./assets/imagens/Logo/logoVertical.png" width="120px" class="logo">
+        <img src="./assets/imagens/Logo/logoVertical.png" width="120px" class="logo" alt="logo da Envision no rodapé">
         <section>
             <div class="parte-superior">
                 <nav>
