--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body id="top">
     <header>
-        <img src="./assets/imagens/Logo/logoHorizontal.png" width="180px" class="logo">
+        <img src="./assets/imagens/Logo/logoHorizontal.png" width="180px" class="logo" alt="Logo da Envision no cabeçalho">
         <nav>
             <ul>
                 <li><a href="./index.html">Página Inicial</a></li>
@@ -46,10 +46,10 @@
                     <p>Nova tecnologia de ponta. Um processador que se adapta a todas as suas tarefas.</p>
                     <button>Saiba Mais</button>
                 </div>
-                <img src="./assets/imagens/circuitos.png" width="520px"  class="imagem-novidade1">
+                <img src="./assets/imagens/circuitos.png" width="520px"  class="imagem-novidade1" alt="imagem de circuitos elétricos dos novos processadores Envision C620">
             </div>
             <div class="novidade novidade2">
-                <img src="./assets/imagens/palestra.png" width="520px"  class="imagem-novidade imagem-novidade2">
+                <img src="./assets/imagens/palestra.png" width="520px"  class="imagem-novidade imagem-novidade2" alt="imagem de representante da Envision dando uma discurso no evento oficial de anúncio das empresas de tecnologia mais bem sucedidas do mundo">
                 <div class="texto-novidade texto-novidade2">
                     <h2>A empresa que te prepara para um futuro brilhante</h2>
                     <p>Classificada, por três anos seguidos, como uma das empresas de tecnologia mais bem sucedidas do Brasil</p>
@@ -61,12 +61,12 @@
 
         </section>
         <section class="categorias">
-            <img src="./assets/imagens/placadevideo.png" class="categoria categoria1" width="100%">
-            <img src="./assets/imagens/processador.png" class="categoria categoria2" width="100%">
+            <img src="./assets/imagens/placadevideo.png" class="categoria categoria1" width="100%" alt="imagem de placa de vídeo da Envision">
+            <img src="./assets/imagens/processador.png" class="categoria categoria2" width="100%" alt="imagem de processador da Envision">
         </section>
     </main>
     <footer>
-        <img src="./assets/imagens/Logo/logoVertical.png" width="120px" class="logo">
+        <img src="./assets/imagens/Logo/logoVertical.png" width="120px" class="logo" alt="logo da Envision no rodapé">
         <section>
             <div class="parte-superior">
                 <nav>
