--- a/produto.html
+++ b/produto.html
@@ -19,7 +19,7 @@
 </head>
 <body id="top">
     <header>
-        <img src="./assets/imagens/Logo/logoHorizontal.png" width="180px" class="logo">
+        <img src="./assets/imagens/Logo/logoHorizontal.png" width="180px" class="logo" alt="logo da Envision no cabeçalho">
         <nav>
             <ul>
                 <li><a href="./index.html">Página Inicial</a></li>
@@ -41,7 +41,7 @@
         </div>
         <section id="placa-de-video">
             <div>
-                <img src="./assets/imagens/gpu1.png">
+                <img src="./assets/imagens/gpu1.png" alt="card de representação da placa de vídeo GN² 800 Super">
                 <div>
                     <h2>Envision GN² 800 Super</h2>
                     <p>
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div>
-                <img src="./assets/imagens/gpu2.png">
+                <img src="./assets/imagens/gpu2.png" alt="card de representação da placa de vídeo GN² 800 Ti">
                 <div>
                     <h2>Envision GN² 800 Ti</h2>
                     <p>
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div>
-                <img src="./assets/imagens/gpu3.png">
+                <img src="./assets/imagens/gpu3.png" alt="card de representação da placa de vídeo GN² 800">
                 <div>
                     <h2>Envision GN² 800</h2>
                     <p>
@@ -70,7 +70,7 @@
         </section>
         <section id="processador">
             <div>
-                <img src="./assets/imagens/cpu1.png">
+                <img src="./assets/imagens/cpu1.png" alt="card de representação do processador Vision Core C620 Ultra">
                 <div>
                     <h2>Vision Core C620 Ultra</h2>
                     <p>
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div>
-                <img src="./assets/imagens/cpu2.png">
+                <img src="./assets/imagens/cpu2.png" alt="card de representação do processador Vision Core C620 Max">
                 <div>
                     <h2>Vision Core C620 Max</h2>
                     <p>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div>
-                <img src="./assets/imagens/cpu3.png">
+                <img src="./assets/imagens/cpu3.png" alt="card de representação do processador Vision Core C620">
                 <div>
                     <h2>Vision Core C620</h2>
                     <p>
@@ -100,7 +100,7 @@
         </section>
     </main>
     <footer>
-        <img src="./assets/imagens/Logo/logoVertical.png" width="120px" class="logo">
+        <img src="./assets/imagens/Logo/logoVertical.png" width="120px" class="logo" alt="logo da Envision no rodapé">
         <section>
             <div class="parte-superior">
                 <nav>
