--- a/produto.html
+++ b/produto.html
@@ -10,9 +10,9 @@
     <script src="https://kit.fontawesome.com/415f58636f.js" crossorigin="anonymous"></script>
 
     <!-- Link Fonte -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@200;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" defer>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin defer>
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@200;400;700&display=swap" rel="stylesheet" defer>
     
     <!-- Link CSS -->
     <link rel="stylesheet" href="./assets/style/produto.css" id="linkCss" tema="claro">
