Retirando o defer dos links de fonte e colocando-os no final do body

--- a/contato.html
+++ b/contato.html
@@ -7,15 +7,10 @@
     <title>Envision | Contato</title>
 
     <!-- Link CSS -->
-    <link rel="stylesheet" href="./assets/style/contato.css" id="linkCss" tema="claro">
+    <link rel="stylesheet" href="./assets/style/contato.css" id="linkCss" data-tema="claro">
 
     <!-- Link Icones -->
     <script src="https://kit.fontawesome.com/415f58636f.js" crossorigin="anonymous"></script>
-
-    <!-- Link Fonte -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" defer>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin defer>
-    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@200;400;700&display=swap" rel="stylesheet" defer>
 </head>
 <body id="top">
     <header>
@@ -103,6 +98,10 @@
         <div class="container-seta"><a href="#top"><i class="fa-solid fa-arrow-up"></i></a></div>
     </footer>
 
+        <!-- Link Fonte -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@200;400;700&display=swap" rel="stylesheet">
     <script src="./assets/script/scriptContato.js"></script>
 </body>
 </html>
